<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:text="@string/ourteamstring"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView"
        android:layout_alignParentStart="true"
        android:layout_marginStart="18dp"
        android:layout_marginTop="22dp"
        android:id="@+id/tv_student_num"
        android:textSize="16sp"
        android:textStyle="normal|bold"
        android:fontFamily="serif" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_student_num"
        android:layout_alignStart="@+id/tv_student_num"
        android:layout_marginTop="14dp"
        android:id="@+id/tv_date" />

    <TextView
        android:text="@string/description_about"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textView"
        android:textAlignment="center"
        android:textSize="24sp"
        android:fontFamily="cursive"
        android:textStyle="normal|bold"
        android:layout_marginTop="83dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:textColor="@android:color/background_dark" />

    <TextView
        android:text="@string/member2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView5"
        android:fontFamily="casual"
        android:textStyle="normal|bold"
        android:layout_below="@+id/tv_date"
        android:layout_alignStart="@+id/tv_date"
        android:textColor="@android:color/background_dark" />

    <TextView
        android:text="@string/member3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView6"
        android:fontFamily="casual"
        android:textStyle="normal|bold"
        android:layout_below="@+id/textView5"
        android:layout_alignStart="@+id/textView5"
        android:textColor="@android:color/background_dark" />

    <TextView
        android:text="@string/member1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView4"
        android:fontFamily="casual"
        android:textStyle="normal|bold"
        android:layout_alignBottom="@+id/tv_date"
        android:layout_alignStart="@+id/tv_date"
        android:textColor="@android:color/background_dark" />
</RelativeLayout>