<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="1">

        <TextView
            android:layout_width="19dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="10dp"
            android:layout_gravity="left"
            android:text="@string/tv_id_in"
            android:textStyle="normal|bold"
            android:id="@+id/tv_inv_id" />
        <TextView
            android:id="@+id/tv_inv_name"
            android:layout_width="266dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="10dp"
            android:layout_gravity="left"
            android:text="@string/tv_part_name"
            android:textStyle="normal|bold" />

        <TextView
            android:id="@+id/tv_inv_stock"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:text="@string/tv_num_instock"
            android:textStyle="normal|bold" />
    </LinearLayout>

</LinearLayout>