<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_inventory"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="humberparts.walkingprogrammers.InventoryActivity"
    tools:showIn="@layout/activity_inventory"
    android:background="@drawable/inventory">
<LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="1">

            <TextView
                android:layout_width="19dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginLeft="10dp"
                android:layout_gravity="left"
                android:text="@string/tv_id_in"
                android:textStyle="normal|bold"
                android:id="@+id/tv_id_in" />
            <TextView
                android:id="@+id/tv_part_name"
                android:layout_width="266dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginLeft="10dp"
                android:layout_gravity="left"
                android:text="@string/tv_part_name"
                android:textStyle="normal|bold" />

            <TextView
                android:id="@+id/tv_num_instock"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:text="@string/tv_num_instock"
                android:textStyle="normal|bold" />
        </LinearLayout>

    <ListView
        android:id="@+id/lv_inventory"
        android:layout_width="match_parent"
        android:layout_height="412dp" />

</LinearLayout>
</ScrollView>
