<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" android:id="@+id/content_main"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="humberparts.walkingprogrammers.MainActivity"
    tools:showIn="@layout/activity_main"
    android:background="@drawable/mainscreen1">


    <TextView
        android:text="@string/welcone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/Name"
        android:textAlignment="center"
        android:textStyle="normal|bold|italic"
        android:textSize="24sp"
        android:fontFamily="serif" />

    <ImageView
        android:id="@+id/hardwareiconpic"
        android:layout_width="wrap_content"
        android:layout_height="150dp"
        android:layout_gravity="center"
        android:src="@mipmap/hardwareicon"/>

    <ProgressBar
        android:id="@+id/progressBar_database"
        style="@android:style/Widget.Holo.ProgressBar.Large"
        android:progressDrawable="@android:color/holo_blue_dark"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />


    <Button
    android:id="@+id/buttonInventory"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:onClick="callIntent"
    android:layout_weight="1"
    android:text="@string/inventorystring"
    android:backgroundTint="@android:color/transparent" />

    <Button
        android:id="@+id/buttonadminlogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:onClick="callIntent"
        android:layout_weight="1"
        android:text="@string/loginadminstring"
        android:backgroundTint="@android:color/transparent" />


</LinearLayout>
