<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_admin"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="humberparts.walkingprogrammers.AdminActivity"
    tools:showIn="@layout/activity_admin"
    android:background="@drawable/mainscreen1"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <Button
                android:id="@+id/buttonadd"
                android:layout_width="match_parent"
                android:layout_height="230dp"
                android:text="@string/addstring"
                android:textColor="@color/black"
                android:layout_gravity="center_horizontal"
                android:onClick="callIntent"
                android:backgroundTint="@android:color/transparent"/>

            <ProgressBar
                android:id="@+id/progressBar2"
                style="@android:style/Widget.Holo.ProgressBar.Large"
                android:progressDrawable="@android:color/holo_blue_dark"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <Button
                android:id="@+id/buttondelete"
                android:layout_width="match_parent"
                android:layout_height="230dp"
                android:text="@string/deletestring"
                android:textColor="@color/black"
                android:layout_gravity="center_horizontal"
                android:onClick="callIntent"
                android:backgroundTint="@android:color/transparent"
                />

            <Button
                android:id="@+id/button_view"
                android:layout_width="match_parent"
                android:layout_height="230dp"
                android:text="@string/button_view"
                android:textColor="@color/black"
                android:layout_gravity="center_horizontal"
                android:onClick="callIntent"
                android:backgroundTint="@android:color/transparent"
                />
        </LinearLayout>
    </ScrollView>


</LinearLayout>
