<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="humberparts.walkingprogrammers.LoginActivity"
    tools:showIn="@layout/activity_login"
    android:background="@drawable/mainscreen1">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/usernamestring"
        android:textSize="30dp"
        android:textColor="@color/black"
        android:layout_marginBottom="15dp"/>

    <EditText
        android:id="@+id/edittextusername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/usernamestring"
        android:background="@color/transparent"
        android:layout_marginBottom="20dp"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/passwordstring"
        android:textSize="30dp"
        android:textColor="@color/black"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="15dp"/>

    <EditText
        android:id="@+id/edittextpassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/passwordstring"
        android:layout_marginBottom="20dp"
        android:background="@color/transparent"
        android:inputType="textPassword"
        android:password="true"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"/>

    <ProgressBar
        android:id="@+id/progressBar1"
        style="@android:style/Widget.Holo.ProgressBar.Large"
        android:progressDrawable="@android:color/holo_blue_dark"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/buttonlogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:textColor="@color/white"
        android:text="@string/loginstring"
        android:onClick="callIntent"
        android:layout_marginTop="30dp"/>
</LinearLayout>

</ScrollView>
